<resources>
    <string name="app_name">DIVA.NET Browser</string>
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="account_input_title">ログイン</string>
    <string name="access_code">アクセスコード:</string>
    <string name="password">パスワード：</string>
    <string name="auto_option">自動オプション：</string>
    <string name="module">モジュール</string>
    <string name="skin">スキン</string>
    <string name="button_se">ボタン音</string>
    <string name="unset">未設定に</string>
    <string name="item_update_all">全曲更新</string>
    <string name="item_update_new">新曲チェック</string>
    <string name="item_update_selction">更新</string>
    <string name="item_update_bulk">一括更新</string>
    <string name="item_update_in_history">履歴から更新</string>
    <string name="item_search">検索</string>
    <string name="item_sort">ソート</string>
    <string name="item_open_web">DIVA.NET</string>
    <string name="item_news">ニュース</string>
    <string name="item_vp_history">VP履歴</string>
    <string name="item_play_history">プレイ履歴</string>
    <string name="item_contest">コンテスト情報</string>
    <string name="item_statistics">クリア統計情報</string>
    <string name="item_ranking_list">ランクインリスト</string>
    <string name="item_achievment_ranking">達成率ランキング</string>
    <string name="item_check_record">クリア判定</string>
    <string name="item_reverse_order">逆順</string>
    <string name="item_game_settings">ゲーム設定</string>
    <string name="item_tool_settings">ツール設定</string>
    <string name="item_mylist">マイリスト管理</string>
    <string name="item_sync_mylist">サーバーに同期</string>
    <string name="item_edit_name">マイリスト名を編集</string>
    <string name="item_delete">マイリスト削除</string>
    <string name="item_activate_mylist">筐体で使用</string>
    <string name="item_edit_mylist">マイリスト編集</string>
    <string name="item_select">選択</string>
    <string name="item_enable_selection">複数選択</string>
    <string name="item_cancel_selection">選択解除</string>
    <string name="item_edit_reading">読み仮名編集</string>
    <string name="item_ranking">ランキング表示</string>
    <string name="item_copy_title">曲名をコピー</string>
    <string name="item_update">更新</string>
    <string name="item_switch_display">表示切替</string>
    <string name="item_show_all">全て</string>
    <string name="item_show_purchased">購入済み</string>
    <string name="item_show_not_purchased">未購入</string>
    <string name="descending">降順</string>
    <string name="message_downloading">プレイデータの取得中&#8230;</string>
    <string name="message_loading">読み込み中&#8230;</string>
    <string name="message_login_processing">ログイン中&#8230;</string>
    <string name="message_set_module">楽曲別モジュールを設定します。よろしいですか?</string>
    <string name="message_reset_module">楽曲別モジュールを未設定にします。よろしいですか?</string>
    <string name="message_set_skin">楽曲別スキンを設定します。よろしいですか?</string>
    <string name="message_reset_skin">楽曲別スキンを未設定にします。よろしいですか?</string>
    <string name="message_set_button_se">楽曲別ボタン音を設定します。よろしいですか?</string>
    <string name="message_reset_button_se">楽曲別ボタン音を未設定にします。よろしいですか?</string>
    <string name="category_basic">基本設定</string>
    <string name="default_tab">初期表示タブ</string>
    <string name="summary_default_tab">起動時に表示するタブを選択します</string>
    <string name="music_layout">楽曲レイアウト</string>
    <string name="summary_music_layout">楽曲一覧の表示形式を選択します</string>
    <string name="category_web">Web画面設定</string>
    <string name="enable_builtin_zoom">ズームボタン表示</string>
    <string name="summary_enable_builtin_zoom">ズームボタンの表示/非表示を切り替えます</string>
    <string name="category_ranking">ランキング</string>
    <string name="download_rankin">ランクイン情報を取得</string>
    <string name="summary_download_rankin">有効にするとランクイン情報を定期的に取得します</string>
    <string name="ranking_check_time">チェック時刻</string>
    <string name="summary_ranking_check_time">%1$d:%2$02dから1時間の間にランクイン情報を更新します</string>
    <string name="notify_ranking_updated">更新を通知</string>
    <string name="summary_notify_ranking_updated">ランクイン情報を更新した時にステータスバーで通知します</string>
    <string name="notification_ranking_updated">ランキング情報を更新しました</string>
    <string name="category_information">基本情報</string>
    <string name="version_number">バージョン番号</string>
    <string name="category_player">プレイヤー情報設定</string>
    <string name="description_rename">プレイヤー名変更</string>
    <string name="summary_rename">※10VPが必要です</string>
    <string name="description_title">称号を変更</string>
    <string name="description_title_replace">上書き設定</string>
    <string name="summary_title_replace">メイン称号を新しく入手した際に設定中の称号を上書きします</string>
    <string name="category_module_common">共通モジュール設定</string>
    <string name="description_module_common">ボーカル%d</string>
    <string name="description_reset_common">初期設定に戻す</string>
    <string name="summary_reset_common">初期化すると「初音ミク」になります</string>
    <string name="message_reset_common">初期化すると「初音ミク」になります。よろしいですか?</string>
    <string name="category_individual">楽曲別設定</string>
    <string name="description_reset_individual">未設定に戻す(全楽曲)</string>
    <string name="summary_reset_individual">全楽曲の楽曲別設定を未設定にします</string>
    <string name="message_reset_individual">全楽曲の楽曲別設定を未設定にします。ボタン音は楽曲ごとの初期設定に戻ります。\nよろしいですか?</string>
    <string name="description_sync_individual">サーバーと同期</string>
    <string name="summary_sync_individual">既に端末にあるモジュール等しか取得しません。予め個々の一覧等で更新が必要です</string>
    <string name="message_sync_individual">サーバーから楽曲別設定を取得します。よろしいですか?</string>
    <string name="category_activation_individual">ON/OFF設定</string>
    <string name="summary_activation_individual">OFFにした場合、共通設定が全楽曲に適用されます</string>
    <string name="summary_activation_individual_se">OFFにした場合、楽曲ごとの初期設定ボタン音が適用されます</string>
    <string name="category_skin">スキン設定</string>
    <string name="category_skin_common">共通スキン設定</string>
    <string name="description_set_skin">スキンを設定する</string>
    <string name="summary_set_skin">選択したスキンを設定します</string>
    <string name="description_unset_skin">未設定にする</string>
    <string name="summary_unset_skin">スキンを未設定にします</string>
    <string name="message_unset_skin">スキンを未設定にします。よろしいですか?</string>
    <string name="category_common_buttonse">共通ボタン音設定</string>
    <string name="description_set_buttonse">ボタン音を設定する</string>
    <string name="summary_set_buttonse">選択したボタン音を設定します</string>
    <string name="description_unset_buttonse">未設定にする</string>
    <string name="summary_unset_buttonse">ボタン音を未設定にします</string>
    <string name="message_unset_buttonse">ボタン音を未設定にします。よろしいですか?</string>
    <string name="summary_no_module">設定されていません</string>
    <string name="summary_applying">設定しています&#8230;</string>
    <string name="message_updating">更新しています&#8230;</string>
    <string name="message_checking_record">クリア判定をしています&#8230;</string>
    <string name="no_use_skin">スキンを使用しない</string>
    <string name="variant_normal">[NORMAL]</string>
    <string name="not_purchased">(未購入)</string>
    <string name="failed_load_details">詳細情報の取得に失敗しました</string>
    <string name="button_buy">購入する</string>
    <string name="buying">購入しています&#8230;</string>
    <string name="faile_buying">購入処理に失敗しました</string>
    <string name="input_reading">読み仮名入力</string>
    <string name="no_record">プレイ記録がありません。</string>
    <string name="player_name">プレイヤー名</string>
    <string name="level_rank">LEVEL / 称号</string>
    <string name="total_exp">達成率合計</string>
    <string name="next_level">次のレベルまで残り</string>
    <string name="next_rank">次のランクまで残り</string>
    <string name="vocaloid_point">VOCALOID POINT</string>
    <string name="diva_ticket">DIVAチケット</string>
    <string name="title_getting">取得中&#8230;.</string>
    <string name="unknown_title">不明な称号</string>
    <string name="item_update_saturations">達成率理論値を更新</string>
    <string name="message_update_saturations">理論値の更新中&#8230;</string>
    <string name="no_button_se">ボタン音がありません。\nメニューを開いて更新を選択して下さい</string>
    <string name="invalidate_common_button_se">初期設定ボタン音</string>
    <string name="synchronizing">同期しています&#8230;</string>
    <string name="confirm_delete_mylist">マイリストを削除します。よろしいですか?</string>
    <string name="deleting">削除しています&#8230;</string>
    <string name="confirm_activate_mylist">筐体で使用するマイリストとして設定します。よろしいですか?</string>
    <string name="activating">設定しています&#8230;</string>
    <string name="edit_mylist_name">マイリスト名編集</string>
    <string name="message_edit_mylist_name">使用できる文字数は全角と半角カタカナは20文字以内、半角英数と記号は40文字以内です。</string>
    <string name="title_record_tab">[総クリア数: %1$d / %2$d]</string>
    <string name="no_records">レコードがありません。\nメニューを開いて更新を選択して下さい</string>
    <string name="no_records_updated">新たにクリアしたレコードはありません</string>
    <string name="clear_records">レコードをクリアしました</string>
    <string name="notify_news_updated">ニュースの更新を通知</string>
    <string name="summary_notify_news_updated">DIVA.NETニュースの更新を検知した時にステータスバーで通知します</string>
    <string name="news_updated_title">DIVA.NETニュース</string>
    <string name="news_updated_ticker">最新のニュースがあります</string>
    <string name="fast_scroll">高速スクロール</string>
    <string name="summary_fast_scroll">リストをスクロール中にドラッグ可能なスクロールバーを表示します</string>
    <string name="exchange_ticket">チケット交換</string>
    <string name="exchange_skin">スキン</string>
    <string name="exchange_title">デコレーション称号</string>
    <string name="no_prize">交換できるアイテムはありません。\nメニューを開いて更新を選択して下さい</string>
    <string name="do_exchange">交換する</string>
    <string name="exchanging">交換しています&#8230;</string>
    <string name="exchange_failure">交換に失敗しました</string>
    <string name="found_unknown_musics">未登録の楽曲が見つかりました。\n続けて新曲チェックを実行しますか?</string>
    <string name="item_back">戻る</string>
    <string name="item_forward">進む</string>
    <string name="category_history">プレイ履歴</string>
    <string name="download_history">プレイ履歴の自動取得</string>
    <string name="summary_download_history">有効にするとプレイ履歴を定期的に取得します</string>
    <string name="notify_history_download">更新を通知</string>
    <string name="summary_notify_history_download">プレイ履歴を自動取得した時にステータスバーで通知します</string>
    <string name="summary_notify_history_get">プレイ履歴を自動取得した時にステータスバーで通知します</string>
    <string name="history_location_display">店舗名非表示</string>
    <string name="summary_history_location_display">有効にすると共有用の画像作成時に、店舗名を非表示にします</string>
    <string name="notification_history_get">プレイ履歴を自動取得しました</string>
    <string name="no_historys">保存されているプレイ履歴がありません</string>
    <string name="hist_tab_title">プレイ履歴</string>
    <string name="hist_title1">プレイ日付/場所</string>
    <string name="hist_title2">プレイ結果</string>
    <string name="hist_title3">結果詳細</string>
    <string name="hist_date_txt">[日時]</string>
    <string name="hist_place_txt">[場所]</string>
    <string name="hist_music_title_txt">[曲名]</string>
    <string name="hist_rank_txt">[難易度]</string>
    <string name="hist_clear_status_txt">[CLEAR RANK]</string>
    <string name="hist_achievement_txt">[達成率]</string>
    <string name="hist_score_txt">[SCORE]</string>
    <string name="trial_result_txt">[トライアル]</string>
    <string name="hist_cool_txt">COOL :</string>
    <string name="hist_fine_txt">FINE :</string>
    <string name="hist_safe_txt">SAFE :</string>
    <string name="hist_sad_txt">SAD :</string>
    <string name="hist_worst_txt">WORST/WRONG :</string>
    <string name="hist_combo_txt">COMBO :</string>
    <string name="hist_challenge_time_txt">CHALLENGE TIME :</string>
    <string name="hist_hold_txt">同時/HOLD :</string>
    <string name="rp_image_size">画像サイズ</string>
    <string name="rp_image_quality">画質</string>
    <string name="rp_size_big">大</string>
    <string name="rp_size_medium">中</string>
    <string name="rp_size_small">小</string>
    <string name="rp_quality_high">高</string>
    <string name="rp_quality_medium">中</string>
    <string name="rp_quality_low">低</string>
    <string name="rp_print_option">表示オプション</string>
    <string name="rp_print_player">プレイヤー名表示</string>
    <string name="rp_print_location">プレイ店舗名表示</string>
    <string name="rival_menu">ライバル</string>
    <string name="rival_regist">登録</string>
    <string name="rival_change">変更</string>
    <string name="rival_remove">削除</string>
    <string name="rival_update">更新</string>
    <string name="rival_sync">サーバ同期</string>
</resources>