<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/item_update"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/item_update">
        <menu >
            <item
                android:id="@+id/item_update_all"
                android:title="@string/item_update_all"
                />
            <item
                android:id="@+id/item_update_new"
                android:title="@string/item_update_new"
                />
            <item
                android:id="@+id/item_update_in_history"
                android:title="@string/item_update_in_history"
                />
        </menu>
    </item>
    <item
        android:id="@+id/item_update_bulk"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/item_update_bulk"
        />
    <item
        android:id="@+id/item_rival_menu"
        android:icon="@drawable/ic_menu_allfriends"
        android:title="@string/rival_menu">
        <menu>
            <item
                android:id="@+id/item_rival_input"
                android:title="@string/rival_regist"
                />
            <item
                android:id="@+id/item_rival_change"
                android:title="@string/rival_change"
                />
            <item
                android:id="@+id/item_rival_remove"
                android:title="@string/rival_remove"
                />
            <item
                android:id="@+id/item_rival_update"
                android:title="@string/rival_update"
                />
            <item
                android:id="@+id/item_rival_sync"
                android:title="@string/rival_sync"
                />
        </menu>
    </item>
    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/item_search"
        />
    <item
        android:id="@+id/item_sort"
        android:icon="@drawable/ic_menu_sort_by_size"
        android:title="@string/item_sort"
        />
    <item
        android:id="@+id/item_enable_selection"
        android:title="@string/item_enable_selection"
        android:icon="@drawable/ic_menu_mark"
        />
    <item
        android:id="@+id/item_cancel_selection"
        android:title="@string/item_cancel_selection"
        android:icon="@drawable/ic_menu_mark"
        />
</menu>
