<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/category_basic">
		<CheckBoxPreference
			android:key="start_from_favorite"
			android:title="@string/start_from_favorite"
			android:summary="@string/summary_start_from_favorite"
			/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/category_web">
		<CheckBoxPreference
			android:key="enable_builtin_zoom"
			android:title="@string/enable_builtin_zoom"
			android:summary="@string/summary_enable_builtin_zoom"
			/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/category_ranking">
		<CheckBoxPreference
			android:key="download_rankin"
			android:title="@string/download_rankin"
			android:summary="@string/summary_download_rankin"
			/>
		<CheckBoxPreference
			android:key="notify_ranking_updated"
			android:title="@string/notify_ranking_updated"
			android:summary="@string/summary_notify_ranking_updated"
			android:dependency="download_rankin"
			/>
	</PreferenceCategory>
</PreferenceScreen>
