<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:onClick="closePopup"
	>
	<ImageView
		android:id="@+id/cover_art"
		android:src="@drawable/pv_012"
		android:layout_height="0dip"
		android:layout_width="fill_parent"
		android:layout_margin="20dp"
		android:layout_weight="1"
		android:scaleType="fitCenter"
		android:adjustViewBounds="true"
		/>
	<TableLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
			<Button
				android:text="@string/module"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:onClick="setModule"
				/>
			<Button
				android:text="@string/skin"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:onClick="setSkin"
				/>
			<Button
				android:text="@string/button_se"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:onClick="setButtonSE"
				/>
		</TableRow>
		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dip"
			>
			<Button
				android:text="@string/unset"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:onClick="resetModule"
				/>
			<Button
				android:text="@string/unset"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:onClick="resetSkin"
				/>
			<Button
				android:text="@string/unset"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:onClick="resetButtonSE"
				/>
		</TableRow>
	</TableLayout>
</LinearLayout>
